<resources>
    <string name="app_name">小喵白板</string>
    <string name="email">邮箱</string>
    <string name="password">密码(12位)</string>
    <string name="login">登录</string>
    <string name="registerAnAccount">注册账号</string>
    <string name="resetpassword">重置密码</string>
    <string name="nextstep">下一步</string>
    <string name="send_verify_code">发送验证码</string>
    <string name="inputemail">请输入邮箱</string>
    <string name="input_verify_code">请输入验证码</string>
    <string name="resend_verify_code">重新获取验证码</string>
    <string name="resend_verify_code_later">秒后可重新发送</string>
    <string name="goback">返回</string>
    <string name="register">注册</string>
    <string name="complete">完成</string>
    <string name="please_input_your_family_name">请输入您的姓</string>
    <string name="please_input_your_given_name">请输入您的名</string>
    <string name="please_input_your_name">请输入您的名</string>
    <string name="set_your_password">设置12位的登录密码</string>
    <string name="set_personal_info">设置个人信息</string>
    <string name="meeting">会议</string>
    <string name="contacts">联系人</string>
    <string name="settings">设置</string>
    <string name="join_meeting">加入会议</string>
    <string name="system_msg">系统消息</string>
    <string name="host_or_arrange_meeting">安排或主持会议</string>
    <string name="menu_settings">Settings</string>
    <string name="add_friend">添加好友</string>
    <string name="search_contacts_by_email">通过电子邮箱找到联系人</string>
    <string name="meeting_number">会议号</string>
    <string name="meeting_pasword">会议密码</string>
    <string name="please_input_your_meeting_password">请输入会议密码</string>
    <string name="please_input_your_meeting_number">请输入会议号</string>
    <string name="join_meeting_by_meeting_name">使用会议名称加会</string>
    <string name="join_meeting_by_meeting_number">使用会议号加会</string>
    <string name="meeting_name">会议名称</string>
    <string name="host_meeting">召开会议</string>
    <string name="personal_meeting_id">个人会议ID</string>
    <string name="use_personal_meeting_id">使用个人会议ID</string>
    <string name="arrange_meeting">安排会议</string>
    <string name="my_meeting">我的会议</string>
    <string name="free">空闲</string>
    <string name="my_info">我的资料</string>
    <string name="photo">头像</string>
    <string name="name">姓名</string>
    <string name="login_password">登录密码</string>
    <string name="logout">注销</string>
    <string name="familyName">姓</string>
    <string name="givenname">名</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="alterpassword">更改密码</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="set_new_password">设置新密码</string>
    <string name="check_your_password">核对您的密码</string>
    <string name="save">保存</string>
    <string name="refresh">刷新</string>
    <string name="meeting_theme">会议主题</string>
    <string name="date">日期</string>
    <string name="from">从</string>
    <string name="to">到</string>
    <string name="meeting_participate_able_to_draw">与会者默认可绘画</string>
    <string name="meeting_participate_able_to_talk">与会者默认可发言</string>
    <string name="meeting_password_optional">会议密码(8位)</string>
    <string name="add_to_canlendar">添加至日历项</string>
    <string name="meeting_date">开会日期</string>
    <string name="set_time">设置时间</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="set_date">设置日期</string>
    <string name="meeting_info">会议信息</string>
    <string name="edit">编辑</string>
    <string name="when">何时</string>
    <string name="meeting_id">会议ID</string>
    <string name="meeting_length">会议时长</string>
    <string name="start_meeting">开始会议</string>
    <string name="minute">分钟</string>
    <string name="delete_meeting">删除会议</string>
    <string name="add_invite">添加受邀者</string>
    <string name="invite_title">"白板会议邀请-%1$s"</string>
    <string name="invite_content">"你好!\n\t%1$s 正在邀请你加入白板会议。\n\t主题：%2$s\n\t时间：%3$s GMT+8\n\t会议ID： %4$s \n\t密码：%5$s \n\t加入方式：打开安卓小喵白板客户端，点击进入“加入会议”界面，输入会议ID与密码，即可加入。"</string>
    <string name="invite_content_two">"你好!\n\t%1$s 正在邀请你加入白板会议,会议已经开始。\n\t会议ID： %2$s \n\t密码：%3$s \n\t加入方式：打开安卓小喵白板客户端，点击进入“加入会议”界面，输入会议ID与密码，即可加入。"</string>
    <string name="choose_invite_type">选择邀请方式</string>
    <string name="alreday_copy_to_sheet">已经复制到剪贴板</string>
    <string name="choose_sms">选择短信客户端</string>
    <string name="choose_mail">选择邮箱客户端</string>
    <string name="alter_head">更改头像</string>
    <string name="choose_head">选择头像</string>
    <string name="camera">照相机</string>
    <string name="gallery">相册</string>
    <string name="copy_to_sheet">复制到剪贴板</string>
    <string name="should_get_this_for_insert_event_to_calendar">应用需要该权限才能添加会议安排到日历提醒</string>
    <string name="should_get_this_to_alter_head">应用需要该权限才能更改头像</string>
    <string name="should_get_this_to_photo">应用需要该权限才能发送图片</string>
    <string name="meeting_location">安卓小喵共享白板-加入会议</string>
    <string name="meeting_event_already_add">会议的日历事件提醒添加成功</string>
    <string name="can_not_recognize_email">不能识别的邮箱</string>
    <string name="can_not_recognize_family_name">不能识别的姓(只允许汉字、英文字母、数字,且不能以数字开头)</string>
    <string name="can_not_recognize_given_name">不能识别的名(只允许汉字、英文字母、数字,且不能以数字开头)</string>
    <string name="can_not_recognize_meeting_theme">不能识别的会议主题(只允许汉字、英文字母、数字,且不能以数字开头)</string>
    <string name="can_not_recognize_login_password">不能识别的登录密码(12位,只允许英文字母、数字、下划线,且以字母开头)</string>
    <string name="can_not_recognize_login_password2">不能识别的登录密码</string>
    <string name="can_not_recognize_meeting_url">不能识别的会议ID</string>
    <string name="can_not_recognize_meeting_password2">不能识别的会议密码</string>
    <string name="can_not_recognize_meeting_password">不能识别的入会密码(8位,只允许英文字母、数字、下划线,且以字母开头)</string>
    <string name="system_error">操作出现错误</string>
    <string name="please_relogin">请重新登录来尝试解决问题</string>
    <string name="click_to_set_avatar">点击设置头像</string>
    <string name="logout_failed">注销失败</string>
    <string name="saving">保存...</string>
    <string name="sending">发送...</string>
    <string name="get_version_info">获取最新版本信息...</string>
    <string name="checking">核对...</string>
    <string name="arranging">安排...</string>
    <string name="loding">加载...</string>
    <string name="logingin">登录...</string>
    <string name="entering">进会...</string>
    <string name="deleting">删除...</string>
    <string name="locking">锁定...</string>
    <string name="unlocking">解锁...</string>
    <string name="can_not_recognize_old_pwd">不能识别的旧密码(12位,只允许英文字母、数字、下划线,且以字母开头)</string>
    <string name="can_not_recognize_new_pwd">不能识别的新密码(12位,只允许英文字母、数字、下划线,且以字母开头)</string>
    <string name="can_not_recognize_confirm_pwd">不能识别的确认密码(12位,只允许英文字母、数字、下划线,且以字母开头)</string>
    <string name="new_pwd_diff_confirm_pwd">新密码和确认密码不一致</string>
    <string name="new_pwd_equal_old_pwd">新密码和旧密码相同</string>
    <string name="no_change_alter">没有变化的修改</string>
    <string name="about">关于小喵白板</string>
    <string name="copyright">Copyright © 2017 HFUT SE LiLei.\n All rights reserved.</string>
    <string name="about_board">关于小喵白板</string>
    <string name="recommend">向他人推荐小喵白板</string>
    <string name="feedback">发送反馈</string>
    <string name="version_update">版本更新</string>
    <string name="private_strategy">隐私策略</string>
    <string name="default_meeting_theme">默认会议主题</string>
    <string name="no_name_meeting">未命名的会议</string>
    <string name="his_meeting">的会议</string>
    <string name="delete_meeting_confirm">您是否要删除这个会议</string>
    <string name="logout_confirm">您是否要注销当前账户</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="meeting_theme_param">会议主题: %1$s</string>
    <string name="meeting_id_param">会议ID: %1$s</string>
    <string name="start">开始</string>
    <string name="nothing_else">没有了</string>
    <string name="end">结束</string>
    <string name="lock_meeting">锁定会议</string>
    <string name="participate">参与者</string>
    <string name="share">共享</string>
    <string name="to_share">共享</string>
    <string name="share_fail">共享失败</string>
    <string name="you_are_sharing">你正在共享</string>
    <string name="host_close_share">主持人关闭了共享</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="confirm_leave_meeting">你是否要离开当前会议</string>
    <string name="leave">离开</string>
    <string name="confirm_host_leave">主持人离会,会议结束</string>
    <string name="end_meeting">结束会议</string>
    <string name="choose_share">选择共享资源</string>
    <string name="pic">图片</string>
    <string name="web_page">网页</string>
    <string name="please_input_url">请输入网址</string>
    <string name="open_web_page_error">打开网页失败</string>
    <string name="invalid_web_url">无效网址</string>
    <string name="end_share">结束共享</string>
    <string name="share_web_page">共享网页</string>
    <string name="http">http://</string>
    <string name="host_left_meeting_end">主持人离会,会议结束</string>
    <string name="leaving">离会...</string>
    <string name="lock_success">锁定成功</string>
    <string name="unlock_success">解锁成功</string>
    <string name="talk">聊天</string>
    <string name="invite">邀请</string>
    <string name="current_members">参与者(%1$s)</string>
    <string name="me_host">(我,主持人)</string>
    <string name="forbid_talk">你被禁止讲话</string>
    <string name="allow_talk">你被允许讲话</string>
    <string name="allow_draw">你被允许使用画板</string>
    <string name="forbid_draw">你被禁止使用画板</string>
    <string name="host_allow_draw">主持人允许你使用画板</string>
    <string name="host_forbid_draw">主持人禁止你使用画板</string>
    <string name="host_allow_talk">主持人允许你讲话</string>
    <string name="host_forbid_talk">主持人禁止你讲话</string>
    <string name="you_kick_out">你被主持人踢出</string>
    <string name="member_manage">参会人员管理</string>
    <string name="should_get_to_share">应用需要该权限才能共享</string>
    <string name="init">初始化...</string>
    <string name="send_error">发送失败</string>
    <string name="image_too_large">图片过大</string>
    <string name="max_voice_length">最长语音时间为3分钟</string>
    <string name="should_get_to_screen_record">需要获取权限才能开启录制屏幕功能</string>
    <string name="start_record">开始录制</string>
    <string name="save_to">保存到</string>
    <string name="record_fail">" 录制失败"</string>
    <string name="enter_board">进入白板</string>
    <string name="stop_record_screen">停止录屏</string>
    <string name="quit_board">退出白板</string>
    <string name="start_record_screen">录制屏幕</string>
    <string name="inner_error_relogin">内部错误,请重新登录</string>
    <string name="can_not_make_friend_yourself">不能和自己加好友</string>
    <string name="add_contact">添加联系人</string>
    <string name="delete_contact_confirm">你是否要删除该联系人</string>
    <string name="wait_check">等待验证</string>
    <string name="already_friends">已成为好友</string>
    <string name="friend_request_rejected">好友申请已被对方拒绝</string>
    <string name="already_reject">已拒绝</string>
    <string name="invalid">失效</string>
    <string name="message_list">消息列表</string>
    <string name="you_request_to_add_friend">你请求添加对方为好友</string>
    <string name="he_request_add_friend">对方请求添加你为好友</string>
    <string name="no_msgs">没有消息哦~</string>
    <string name="request_to_be_your_friend">请求添加你为好友</string>
    <string name="other_accept_your_friend_request">同意了你的好友申请</string>
    <string name="other_reject_your_friend_request">拒绝了你的好友申请</string>
    <string name="other_remove_you_from_friend_list">把你从好友列表中移除</string>
    <string name="you_have_no_friend_now">还没好友哦,赶快添加吧~</string>
    <string name="no_network">没有联网哦</string>
    <string name="delete">删除</string>
    <string name="already_choosed_contacts">还没选择任何联系人</string>
    <string name="invite_contact">邀请联系人</string>
    <string name="invite_already_sent">邀请已发送</string>
    <string name="copy_to_clipboard">复制到剪贴板</string>
</resources>