<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <RelativeLayout style="@style/actionbar">


        <ImageView
            android:id="@+id/img_alterpassword_goback"
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_yellow_leftarrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/img_alterpassword_goback"
            android:gravity="center"
            android:text="@string/alterpassword"
            android:textSize="@dimen/nav_title_size" />

        <Button
            android:id="@+id/btn_alterpassword_save"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@color/my_transparent"
            android:text="@string/save" />

    </RelativeLayout>

    <LinearLayout style="@style/content_vertical_space" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/my_barblack"
        android:orientation="vertical">

        <LinearLayout
            style="@style/common_horizontal_division_line_style"
            android:background="@color/my_deepgray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin">


            <TextView
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical|left"
                android:text="@string/old_password"
                android:textColor="@color/my_yellow"
                android:textSize="@dimen/small_text_size" />

            <EditText
                android:id="@+id/et_alterpassword_oldpassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/my_transparent"
                android:gravity="center"
                android:hint="@string/check_your_password"
                android:textSize="@dimen/small_text_size" />


        </LinearLayout>


        <LinearLayout
            style="@style/common_horizontal_division_line_style"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:background="@color/my_deepgray" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin">


            <TextView
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical|left"
                android:text="@string/new_password"
                android:textColor="@color/my_yellow"
                android:textSize="@dimen/small_text_size" />


            <EditText
                android:id="@+id/et_alterpassword_newpassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/my_transparent"
                android:gravity="center"
                android:hint="@string/set_new_password"
                android:textSize="@dimen/small_text_size" />


        </LinearLayout>

        <LinearLayout
            style="@style/common_horizontal_division_line_style"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:background="@color/my_deepgray" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin">


            <TextView
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical|left"
                android:text="@string/confirm"
                android:textColor="@color/my_yellow"
                android:textSize="@dimen/small_text_size" />

            <EditText
                android:id="@+id/et_alterpassword_confirmpassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/my_transparent"
                android:gravity="center"
                android:hint="@string/confirm_password"
                android:textSize="@dimen/small_text_size" />

        </LinearLayout>

        <LinearLayout
            style="@style/common_horizontal_division_line_style"
            android:background="@color/my_deepgray" />
    </LinearLayout>


</LinearLayout>
