<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:clipToPadding="true"
              android:fitsSystemWindows="true"
              android:orientation="vertical"
              tools:context="cn.edu.hfut.lilei.shareboard.activity.RegisterActivity">

    <RelativeLayout style="@style/actionbar">


        <ImageView
            android:id="@+id/img_register_goback"
            style="@style/actionbar_goback"/>

        <TextView
            android:id="@+id/tv_register_register"
            style="@style/navbar_title_textview_style"
            android:text="@string/register"/>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin26"
        android:paddingRight="@dimen/activity_horizontal_margin26">


        <EditText
            android:id="@+id/et_register_email"
            style="@style/big_edittext"
            android:layout_marginTop="20dp"
            android:hint="@string/inputemail"
            android:inputType="textEmailAddress"
            android:maxLength="60"
            android:textColor="@color/my_white"/>


        <LinearLayout
            android:id="@+id/ll_register_bottomlineofemail"
            style="@style/common_horizontal_division_line_style"
            android:background="@color/my_yellow"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_register_verify_code"
                style="@style/big_edittext"
                android:layout_width="150dp"
                android:layout_gravity="left"
                android:hint="@string/input_verify_code"
                android:textColor="@color/my_white"/>

            <TextView
                android:id="@+id/tv_register_send_verify_code"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_vertical|end"
                android:background="@drawable/btn_yellow_default"
                android:gravity="center"
                android:maxLength="12"
                android:padding="5dp"
                android:text="@string/send_verify_code"
                android:textColor="@color/my_black"
                android:textSize="12sp"/>
        </RelativeLayout>


        <LinearLayout
            android:id="@+id/ll_register_bottomlineof_verify_code"
            style="@style/common_horizontal_division_line_style"
            android:background="@color/my_yellow"/>


        <Button
            android:id="@+id/btn_register_nextstep"
            style="@style/BigButton"
            android:layout_marginTop="20dp"
            android:text="@string/nextstep"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical"/>

</LinearLayout>
